Version 3.2.5, released ????-??-??
----------------------------------
- Add support for running integrations tests from "src/it"
  - Add "integration-test-compile" and "integration-test" phases
- Rename "libs" to "lib" in the generated artifact
- Move XP-Framework artifacts to "libs/runtime" in the generated artifact
- Move XP-Framework bootstrap to "libs/bootstrap" in the generated artifact
- Move "patch" artifacts at the top of the "*.pth" entries list rather than using the "!" marker
- Add "target/xsl" directory to classpath when running tests; if exists
  (mrosoiu)


Version 3.2.4, released 2012-12-07
----------------------------------
- Fix xar artifact description: it does not include dependencies
  (mrosoiu)


Version 3.2.3, released 2012-12-06
----------------------------------
- Don't set USE_XP env variable when this.use_xp == null
- Pack lib resources (src/main/xsl) to artifact archive root (/)
  (mrosoiu)


Version 3.2.2, released 2012-12-04
----------------------------------
- Handle Windows-only and Un*x-only PHP extensions
- Reformat ChangeLog
  (mrosoiu)

- Set USE_XP env variable to overwrite classpath defined in ~/.xp/xp.ini - see issue #4
  (mrosoiu, kiesel)


Version 3.2.1, released 2012-12-03
----------------------------------
- Fix broken xar lifecycle mappings (lifecycle.xml and components.xml)
- Rename ${xp.runtime.runners.directory} to ${xp.runtime.runners}
  (mrosoiu)

- Add support for loading PHP extensions via [xp.ini] - see issue #4
  (mrosoiu, kiesel)


Version 3.2.0, released 2012-11-15
----------------------------------
- Add "xp:apidoc" goal to generate and pack project API documentation
- Add "xp:ignite" goal to setup local workspace
- Add "xp:source" goal to pack project sources
- Unify forked/non-forked custom goals (xp:run/xp:run-no-fork and xp:source and xp:source-no-fork)
- Remove the "run" lifecycle as "xp:run" now forks the "xar" lifecycle
- Add ${xp.source.skip} to skip source packing